feat: api login, fix middleware and get list product, product by id
